--- a/app.yaml
+++ b/app.yaml
@@ -1,17 +1,21 @@
 application: museums-map
-version: 1
+version: 2
 api_version: 1
 runtime: python27
 threadsafe: yes
 
 handlers:
-- url: /
-  static_files: index.html
-  upload: index.html
-  secure: always
+- url: /favicon.ico
+  static_files: favicon.ico
+  upload: favicon.ico
   
 - url: /css
   static_dir: css
   
 - url: /js
   static_dir: js
+  
+- url: /
+  static_files: index.html
+  upload: index.html
+  secure: always
